Major Refactoring:  - Update EventManager to allow for annotations on method parameters using ParameterGenerator  - Rewrite Server to use non-blocking IO with java.net.io  - Separate fields in PageRequestEvent to HttpRequest and HttpResponse  - Refactor BodyParser system  - Increase test coverage  - Remove .idea project files  - Add logging using Flogger