@@ -1,24 +1,24 @@
 /*
- *    Copyright 2016 Infuzion
+ * Copyright 2020 Srikavin Ramkumar
  *
- *    Licensed under the Apache License, Version 2.0 (the "License");
- *    you may not use this file except in compliance with the License.
- *    You may obtain a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- *        http://www.apache.org/licenses/LICENSE-2.0
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
- *    Unless required by applicable law or agreed to in writing, software
- *    distributed under the License is distributed on an "AS IS" BASIS,
- *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *    See the License for the specific language governing permissions and
- *    limitations under the License.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package me.infuzion.web.server.util;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 
 public class Utilities {
@@ -29,7 +29,7 @@ public class Utilities {
         return toRet;
     }
 
-    public static Map<String, List<String>> splitQuery(URL url) throws UnsupportedEncodingException {
+    public static Map<String, List<String>> splitQuery(URL url) {
         final Map<String, List<String>> query_pairs = new LinkedHashMap<>();
         if (url.getQuery() == null) {
             return query_pairs;
@@ -37,7 +37,7 @@ public class Utilities {
         return parseQuery(url.getQuery());
     }
 
-    public static Map<String, List<String>> parseQuery(String query) throws UnsupportedEncodingException {
+    public static Map<String, List<String>> parseQuery(String query) {
         if (query == null) {
             return new HashMap<>();
         }
@@ -45,11 +45,11 @@ public class Utilities {
         final String[] pairs = query.split("&");
         for (String pair : pairs) {
             final int idx = pair.indexOf("=");
-            final String key = idx > 0 ? URLDecoder.decode(pair.substring(0, idx), "UTF-8") : pair;
+            final String key = idx > 0 ? URLDecoder.decode(pair.substring(0, idx), StandardCharsets.UTF_8) : pair;
             if (!query_pairs.containsKey(key)) {
                 query_pairs.put(key, new LinkedList<>());
             }
-            final String value = idx > 0 && pair.length() > idx + 1 ? URLDecoder.decode(pair.substring(idx + 1), "UTF-8") : null;
+            final String value = idx > 0 && pair.length() > idx + 1 ? URLDecoder.decode(pair.substring(idx + 1), StandardCharsets.UTF_8) : null;
             query_pairs.get(key).add(value);
         }
         return query_pairs;
